サイトバージョンを記載するように

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             <span id="pc-view" class="view-link">PC版</span> | 
             <span id="mobile-view" class="view-link">スマホ版</span>
         </p>
+        <p id="version-info">サイトバージョン: v1.0.0</p> <!-- バージョン情報を表示 -->
     </footer>
 
     <script>
