仮画像を入れてみた

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <!-- 遊び方 -->
     <section id="how-to-play" class="how-to-play">
         <h2>遊び方</h2>
-        <img src="how_to_play1.png" alt="遊び方画像1">
-        <img src="how_to_play2.png" alt="遊び方画像2">
+        <img src="assets/how_to_play1.png" alt="遊び方画像1">
+        <img src="assets/how_to_play2.png" alt="遊び方画像2">
     </section>
 
     <!-- エンディング -->
@@ -60,15 +60,15 @@
         <div class="qr-codes">
             <div>
                 <p>2枚獲得したとき</p>
-                <img src="qr_code1.png" alt="QRコード1">
+                <img src="assets/qr_code1.png" alt="QRコード1">
             </div>
             <div>
                 <p>1枚獲得したとき</p>
-                <img src="qr_code2.png" alt="QRコード2">
+                <img src="assets/qr_code2.png" alt="QRコード2">
             </div>
             <div>
                 <p>0枚獲得したとき</p>
-                <img src="qr_code3.png" alt="QRコード3">
+                <img src="assets/qr_code3.png" alt="QRコード3">
             </div>
         </div>
     </section>
