--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link id="main-stylesheet" rel="stylesheet" href="css/styles.css">
     <link id="mobile-stylesheet" rel="stylesheet" href="css/mobile-styles.css" disabled>
     <link id="pc-stylesheet" rel="stylesheet" href="css/pc-styles.css" disabled>
+<!--
+    <style>
+        body {
+            background-image: url('assets/hp_background.png');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+        }
+    </style>
+-->
 </head>
 <body>
 
@@ -33,25 +43,15 @@
 
     <!-- プロローグ -->
     <section class="prologue">
-        <p>都内で凶悪な魔法犯罪が発生。<br>
-        被疑者は次々と女性たちを残虐な手口で殺害する
-        <ruby>連続殺人鬼<rp>（</rp><rt>シリアルキラー</rt><rp>）</rp></ruby>・時任暗児。<br>
-        時任の行方を突き止めるための手掛かりを求め、捜査官・風馬駿と魔法使いアルペジオは、<br>
-        記憶透視魔法『ダイブ』を使用して被害者女性の記憶の世界を捜査する。</p>
-
-        <p>果たして、ダンジョンと化した記憶の世界に蠢く
-        <ruby>魔法生命体<rp>（</rp><rt>ゴーレム</rt><rp>）</rp></ruby>たちをかいくぐりつつ、<br>
-        手掛かりを得ることができるのだろうか……？</p>
-
-        <p>原作/シナリオ：喜多山浪漫<br>
-        ゲームデザイン：H1RO</p>
+        <img src="assets/img-prologue.png" alt="プロローグ">
     </section>
 
     <!-- 遊び方 -->
     <section id="how-to-play" class="how-to-play">
         <h2>遊び方</h2>
         <img src="assets/how_to_play1.png" alt="遊び方画像1">
-        <img src="assets/how_to_play2.png" alt="遊び方画像2">
+        <img src="assets/img-inassets.png" alt="遊び方画像2">
+        <img src="assets/img-how-to-play1.png" alt="遊び方画像2">
     </section>
 
     <!-- エンディング -->
