コメントとフッター編集

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link id="main-stylesheet" rel="stylesheet" href="css/styles.css">
     <link id="mobile-stylesheet" rel="stylesheet" href="css/mobile-styles.css" disabled>
     <link id="pc-stylesheet" rel="stylesheet" href="css/pc-styles.css" disabled>
-
     <style>
         body {
             background-image: url('assets/hp_background.png');
@@ -16,7 +15,6 @@
             background-attachment: fixed;
         }
     </style>
-
 </head>
 <body>
 
@@ -49,9 +47,8 @@
     <!-- 遊び方 -->
     <section id="how-to-play" class="how-to-play">
         <h2>遊び方</h2>
-        <img src="assets/how_to_play1.png" alt="遊び方画像1">
-        <img src="assets/img-inassets.png" alt="遊び方画像2">
-        <img src="assets/img-how-to-play1.png" alt="遊び方画像2">
+        <img src="assets/img-inassets.png" alt="内容物">
+        <img src="assets/img-how-to-play1.png" alt="遊び方">
     </section>
 
     <!-- エンディング -->
