ヘッダーロゴ変更

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- ページヘッダー -->
     <header>
-        <h1>ボードゲーム版 魔法捜査官</h1>
+        <img src="assets/img-logo.png" alt="ボードゲーム版 魔法捜査官">
         <nav>
             <div id="hamburger-menu">
                 <span></span>
