権利表記仮

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             <span id="toggle-view" class="view-link">PC版に切り替え</span> <!-- ここが動的に切り替わる -->
         </p>
         <p id="version-info">サイトバージョン: v1.0.1</p> <!-- バージョン情報を表示 -->
+        <!-- 権利表記を追加 -->
+        <p id="copyright">© 2023 ボードゲーム版 魔法捜査官. All rights reserved.</p>
     </footer>
 
     <script>
