--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
             background-attachment: fixed;
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CPHGRZ8F5M"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-CPHGRZ8F5M');
+    </script>
 </head>
 <body>
 
