一旦もらった画像を並べる

--- a/index.html
+++ b/index.html
@@ -45,19 +45,29 @@
 
     <!-- タイトルロゴ -->
     <div class="logo">
-        <img src="main_logo.png" alt="タイトルロゴ">
+        <img src="assets/main_logo.png" alt="タイトルロゴ">
     </div>
 
     <!-- プロローグ -->
     <section class="prologue">
-        <img src="assets/img-prologue.png" alt="プロローグ">
+        <img src="assets/1_story.png" alt="プロローグ">
     </section>
 
     <!-- 遊び方 -->
     <section id="how-to-play" class="how-to-play">
-        <h2>遊び方</h2>
-        <img src="assets/img-inassets.png" alt="内容物">
-        <img src="assets/img-how-to-play1.png" alt="遊び方">
+        <img src="assets/2_assets.png" alt="内容物">
+        <img src="assets/3_how_to_play.png" alt="遊び方">
+        <img src="assets/4_conditions.png" alt="終了条件">
+        <img src="assets/5_setup.png" alt="ゲームの準備">
+    </section>
+
+    <!-- ゲームの進め方 -->
+    <section id="game-flow" class="game-flow">
+        <img src="assets/6_ingame_1.png" alt="ゲームの進め方">
+        <img src="assets/7_ingame_2.png" alt="ゲームの進め方">
+        <img src="assets/8_ingame_3.png" alt="ゲームの進め方">
+        <img src="assets/9_ingame_4.png" alt="ゲームの進め方">
+        <img src="assets/10_ingame_5.png" alt="ゲームの進め方">
     </section>
 
     <!-- エンディング -->
