コピーライト更新

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </p>
         <p id="version-info">サイトバージョン: v1.0.1</p> <!-- バージョン情報を表示 -->
         <!-- 権利表記を追加 -->
-        <p id="copyright">© 2023 ボードゲーム版 魔法捜査官. All rights reserved.</p>
+        <p id="copyright">© Roman Kitayama. All rights reserved.</p>
     </footer>
 
     <script>
