飛び先Youtubeのリンクタグ準備

--- a/index.html
+++ b/index.html
@@ -75,15 +75,21 @@
         <h2>エンディング</h2>
         <div class="qr-codes">
             <div>
+                <a href="https://www.youtube.com/watch?v=hoGp8nVQmb4" target="_blank">
                 <p>2枚獲得したとき</p>
+                </a>
                 <img src="assets/qr_code1.png" alt="QRコード1">
             </div>
             <div>
+                <a href="https://www.youtube.com/watch?v=hoGp8nVQmb4" target="_blank">
                 <p>1枚獲得したとき</p>
+                </a>
                 <img src="assets/qr_code2.png" alt="QRコード2">
             </div>
             <div>
+                <a href="https://www.youtube.com/watch?v=hoGp8nVQmb4" target="_blank">
                 <p>0枚獲得したとき</p>
+                </a>
                 <img src="assets/qr_code3.png" alt="QRコード3">
             </div>
         </div>
