pdfのダウンロードを追加

--- a/index.html
+++ b/index.html
@@ -53,6 +53,32 @@
         <img src="assets/1_story.png" alt="プロローグ">
     </section>
 
+    <!-- 冊子 表-->
+    <section class="book_omote">
+        <img src="assets/book_omote.png" alt="冊子">
+    </section>
+    <section class="download">
+        <div class="pdf-download">
+            <a href="assets/pdf_sample_magicpolice.pdf" target="_blank" rel="noopener noreferrer" title="ボードゲーム版魔法捜査官_ルールブック">
+                <img src="assets/btn_download.png" alt="ダウンロードアイコン" class="download-btn">
+                <img src="assets/btn_download_hover.png" alt="ダウンロードアイコン（ホバー時）" class="download-btn-hover">
+            </a>
+        </div>
+    </section>
+    
+    <!-- 冊子 裏-->
+    <section class="book_ura">
+        <img src="assets/book_ura.png" alt="冊子">
+    </section>
+    <section class="download">
+        <div class="pdf-download">
+            <a href="assets/pdf_sample_magicpolice.pdf" target="_blank" rel="noopener noreferrer" title="ボードゲーム版魔法捜査官_ルールブック">
+                <img src="assets/btn_download.png" alt="ダウンロードアイコン" class="download-btn">
+                <img src="assets/btn_download_hover.png" alt="ダウンロードアイコン（ホバー時）" class="download-btn-hover">
+            </a>
+        </div>
+    </section>
+
     <!-- 遊び方 -->
     <section id="how-to-play" class="how-to-play">
         <img src="assets/2_assets.png" alt="内容物">
@@ -68,6 +94,17 @@
         <img src="assets/8_ingame_3.png" alt="ゲームの進め方">
         <img src="assets/9_ingame_4.png" alt="ゲームの進め方">
         <img src="assets/10_ingame_5.png" alt="ゲームの進め方">
+    </section>
+
+    
+    <!-- ダウンロード -->
+    <section class="download">
+        <div class="pdf-download">
+            <a href="assets/pdf_sample_magicpolice.pdf" target="_blank" rel="noopener noreferrer" title="ボードゲーム版魔法捜査官_ルールブック">
+                <img src="assets/btn_download.png" alt="ダウンロードアイコン" class="download-btn">
+                <img src="assets/btn_download_hover.png" alt="ダウンロードアイコン（ホバー時）" class="download-btn-hover">
+            </a>
+        </div>
     </section>
 
     <!-- エンディング -->
