リソース軽量化

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <!-- 冊子 表-->
     <section class="book_omote">
-        <img src="assets/book_omote.png" alt="冊子">
+        <img src="assets/book_omote_low.png" alt="冊子">
     </section>
     <section class="download">
         <div class="pdf-download">
@@ -68,7 +68,7 @@
     
     <!-- 冊子 裏-->
     <section class="book_ura">
-        <img src="assets/book_ura.png" alt="冊子">
+        <img src="assets/book_ura_low.png" alt="冊子">
     </section>
     <section class="download">
         <div class="pdf-download">
