--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </section>
     <section class="download">
         <div class="pdf-download">
-            <a href="assets/pdf_sample_magicpolice.pdf" target="_blank" rel="noopener noreferrer" title="ボードゲーム版魔法捜査官_ルールブック">
+            <a href="assets/pdf_book_omote.pdf" target="_blank" rel="noopener noreferrer" title="ボードゲーム版魔法捜査官_ルールブック">
                 <img src="assets/btn_download.png" alt="ダウンロードアイコン" class="download-btn">
                 <img src="assets/btn_download_hover.png" alt="ダウンロードアイコン（ホバー時）" class="download-btn-hover">
             </a>
@@ -72,7 +72,7 @@
     </section>
     <section class="download">
         <div class="pdf-download">
-            <a href="assets/pdf_sample_magicpolice.pdf" target="_blank" rel="noopener noreferrer" title="ボードゲーム版魔法捜査官_ルールブック">
+            <a href="assets/pdf_book_ura.pdf" target="_blank" rel="noopener noreferrer" title="ボードゲーム版魔法捜査官_ルールブック">
                 <img src="assets/btn_download.png" alt="ダウンロードアイコン" class="download-btn">
                 <img src="assets/btn_download_hover.png" alt="ダウンロードアイコン（ホバー時）" class="download-btn-hover">
             </a>
