--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- YouTube動画セクション -->
     <section class="youtube-video">
         <div class="video-container">
-            <iframe width="1260" height="708" src="https://www.youtube.com/embed/hoGp8nVQmb4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="1260" height="708" src="https://www.youtube.com/embed/Q5_V5EMvrQs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
 
