リソース更新

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 
     <!-- 冊子 表と冊子 裏を横並びにするためのコンテナ -->
     <section id="book" class="book">
-    <img src="assets/section_story.png" alt="ストーリー">
+    <img src="assets/section_dl_manual.png" alt="冊子ダウンロード" class="book-section-title">
     <div class="book-container">
         <section class="book_omote">
-            <img src="assets/section_story.png" alt="ストーリー">
+            <img src="assets/section_dl_manual_omote.png" alt="表" class="book-section-subtitle">
             <section class="book_omote_img">
                 <img src="assets/book_omote_low.png" alt="冊子">
             </section>
@@ -85,7 +85,7 @@
             </section>
         </section>
         <section class="book_ura">
-            <img src="assets/section_story.png" alt="ストーリー">
+            <img src="assets/section_dl_manual_ura.png" alt="裏" class="book-section-subtitle">
             <section class="book_ura_img">
                 <img src="assets/book_ura_low.png" alt="冊子">
             </section>
@@ -147,19 +147,19 @@
     <!-- エンディング動画 -->
     <section class="local-video">
         <div class="ending-videos">
-            <img src="assets/section_ending.png" alt="エンディング">
+            <img src="assets/video_title_goodend.png" alt="エンディング">
             <video width="630" height="354" controls>
                 <source src="assets/video_goodend.mp4" type="video/mp4">
                 お使いのブラウザは動画タグに対応していません。
             </video>
             
-            <img src="assets/section_ending.png" alt="エンディング">
+            <img src="assets/video_title_badend1.png" alt="エンディング">
             <video width="630" height="354" controls>
                 <source src="assets/video_badend1.mp4" type="video/mp4">
                 お使いのブラウザは動画タグに対応していません。
             </video>
             
-            <img src="assets/section_ending.png" alt="エンディング">
+            <img src="assets/video_title_badend2.png" alt="エンディング">
             <video width="630" height="354" controls>
                 <source src="assets/video_badend2.mp4" type="video/mp4">
                 お使いのブラウザは動画タグに対応していません。
