--- a/index.html
+++ b/index.html
@@ -149,19 +149,19 @@
     <!-- エンディング動画 -->
     <section class="local-video">
         <div class="ending-videos">
-            <img src="assets/video_title_goodend.png" alt="エンディング">
+            <img src="assets/video_title_goodend.png" alt="エンディング" class="ending-video-title">
             <video width="630" height="354" controls>
                 <source src="assets/video_goodend.mp4" type="video/mp4">
                 お使いのブラウザは動画タグに対応していません。
             </video>
             
-            <img src="assets/video_title_badend1.png" alt="エンディング">
+            <img src="assets/video_title_badend1.png" alt="エンディング" class="ending-video-title">
             <video width="630" height="354" controls>
                 <source src="assets/video_badend1.mp4" type="video/mp4">
                 お使いのブラウザは動画タグに対応していません。
             </video>
             
-            <img src="assets/video_title_badend2.png" alt="エンディング">
+            <img src="assets/video_title_badend2.png" alt="エンディング" class="ending-video-title">
             <video width="630" height="354" controls>
                 <source src="assets/video_badend2.mp4" type="video/mp4">
                 お使いのブラウザは動画タグに対応していません。
