遊び方ダウンロード

--- a/index.html
+++ b/index.html
@@ -127,18 +127,26 @@
         <img src="assets/14_solo_play.png" alt="ひとりで遊ぶとき">
     </section>
 
-    
-    <!-- ダウンロード -->
-     <!-- 
-    <section class="download">
-        <div class="pdf-download">
-            <a href="assets/pdf_sample_magicpolice.pdf" target="_blank" rel="noopener noreferrer" title="ボードゲーム版魔法捜査官_ルールブック">
-                <img src="assets/btn_download.png" alt="ダウンロードアイコン" class="download-btn">
-                <img src="assets/btn_download_hover.png" alt="ダウンロードアイコン（ホバー時）" class="download-btn-hover">
-            </a>
+    <!-- 遊び方ダウンロード-->
+    <section id="book" class="book">
+        <!-- <img src="assets/section_dl_manual.png" alt="冊子ダウンロード" class="book-section-title"> -->
+        <div class="book-container">
+            <section class="book_omote">
+                <!--<img src="assets/section_dl_manual_omote.png" alt="表" class="book-section-subtitle"> -->
+                <section class="book_omote_img">
+                    <img src="assets/howtoplay_merge.png" alt="遊び方冊子">
+                </section>
+                <section class="download">
+                    <div class="pdf-download">
+                        <a href="assets/pdf_howtoplay_merged.pdf" target="_blank" rel="noopener noreferrer" title="ボードゲーム版魔法捜査官_ルールブック">
+                            <img src="assets/btn_download.png" alt="ダウンロードアイコン" class="download-btn">
+                            <img src="assets/btn_download_hover.png" alt="ダウンロードアイコン（ホバー時）" class="download-btn-hover">
+                        </a>
+                    </div>
+                </section>
+            </section>
         </div>
     </section>
-    -->
 
     <!-- エンディング -->
     <section id="ending" class="ending">
